# Dynamic-Triage

./: README.md
backend/: Dockerfile  README.md  app.py  example.json  pyproject.toml
backend/dynamic_triage/: Dockerfile  app.py  database.py  db-handler.py  db_handler.py  llm_handler.py  llm_service.py
engine/: .dockerignore  Dockerfile  pyproject.toml
engine/dt-engine/: pyproject.toml
engine/dt-engine/dt_engine/: __init__.py
engine/engine/: __init__.py
frontend/assets/css/: aitext.css  patient.css  styles.css
frontend/assets/js/: patient.js  scripts.js
frontend/templates/: ai-text.html  index.html  layout.html  login.html  patient.html  registration.html  spokedashboard.html
