[tool.poetry]
name = "dynamic-triage"
version = "0.1.0"
description = ""
authors = ["will-s-stone <will@williamstone.me>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
flask = "^3.0.3"
pymongo = "^4.8.0"
transformers = "^4.44.2"
vertexai = "^1.66.0"
google-cloud = "^0.34.0"
google-cloud-aiplatform = "^1.66.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
