[tool.poetry]
name = "engine"
version = "0.1.0"
description = ""
authors = ["will-s-stone <will@williamstone.me>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
transformers = "^4.44.2"
torch = "^2.4.1"
tensorflow = "^2.17.0"
tf-keras = "^2.17.0"
flask = "^3.0.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
